patching some tests